# gazel

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  docker-compose.yml  opencode.json  release-please-config.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-release.yml
.opencode/command/: dev-start.md  dev-stop.md
docs/: design-system-preview.html  mockup-app.html
migrations/: 20260408000000_init.sql  20260408100000_vehicles.sql  20260409000000_settings.sql  20260409100000_fillups.sql  20260410000000_settings_default_eur.sql
openspec/: config.yaml
openspec/changes/2026-06-03-quick-fill-fast-lane/: design.md  proposal.md  tasks.md
openspec/changes/app-shell-layout/: design.md  tasks.md
openspec/changes/fillup-api/: proposal.md
openspec/changes/vehicle-api/: design.md  proposal.md  tasks.md
openspec/specs/api-data-export/: spec.md
openspec/specs/api-error-handling/: spec.md
openspec/specs/api-fillup-crud/: spec.md
openspec/specs/api-health-check/: spec.md
openspec/specs/api-vehicle-crud/: spec.md
openspec/specs/api-vehicle-stats/: spec.md
openspec/specs/core-configuration/: spec.md
src/: config.rs  db.rs  embedded.rs  lib.rs  main.rs  server.rs  state.rs
src/api/: error.rs  export.rs  fillups.rs  import.rs  mod.rs  settings.rs  stats.rs  vehicles.rs
tests/: export.rs  fillups.rs  health.rs  import.rs  settings.rs  stats.rs  ui.rs  vehicles.rs
tests/common/: mod.rs
ui/: .npmrc  .prettierignore  eslint.config.js  package-lock.json  package.json  vite.config.ts
ui/src/: app.html
ui/src/lib/: api.test.ts  (+12 more)
ui/static/: manifest.json  robots.txt
(+167 files in other folders)
